--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -77,12 +77,12 @@
 
 \maketitle
 \begin{abstract}
-Programmers typically construct and manipulate well-typed programs indirectly, as text that must pass through a parser and typechecker. Not all text survives this journey. In particular, text that arises transiently during the editing process, or when the programmer makes a mistake, is commonly found to be malformed or ill-typed. Contending with (i.e. reasoning about) malformed text or well-formed but meaningless syntax trees is a difficult task, for programmers and  tools alike.
+Well-typed expressions are meaningful inductive structures, but programmers typically construct and manipulate them indirectly, as text that must pass through a parser and typechecker. Not all text survives this journey. In particular, text that arises transiently during the editing process, or when the programmer has made a mistake, is often malformed or ill-typed. Contending with (i.e. reasoning about) malformed text or well-formed but meaningless expressions is a difficult task, for programmers and their tools alike.
 
 %  \emph{Structure editors} have long promised to alleviate these burdens by exposing only edit actions that  cause sensible changes to the program structure.
 % Existing designs for structure editors, however, are complex and somewhat \emph{ad hoc}. They also focus primarily on syntactic well-formedness, so programs can still be left semantically meaningless as they are being constructed.
 
-We introduce Hazelnut, a minimal \emph{structure editor} where every edit action leaves the program in both a statically and dynamically meaningful state (with the latter implying that Hazelnut is particularly suitable as a foundation for \emph{live programming environments}.) Uniquely, 1) Hazelnut is defined in a principled type-theoretic style, with a rich metatheory mechanized in Agda; and 2) users need not construct outer forms before they construct inner forms. Instead, Hazelnut's \emph{action semantics} automatically places terms that have a type that is inconsistent with the expected type into a \emph{hole}, which safely defers the type consistency check until the hole is \emph{finished}. Interestingly, this mechanism is related to a mechanism that arises in the semantics of gradual type systems. %Formally, Hazelnut is a bidirectionally typed lambda calculus extended with \emph{holes}, a \emph{focus model} (based on Huet's zipper) and an \emph{action model}.
+We introduce Hazelnut, a minimal \emph{structure editor} where every edit action leaves the expression being edited in both a statically and dynamically meaningful state (with the latter implying that Hazelnut is particularly suitable as a basis for \emph{live programming}.) Uniquely, 1) Hazelnut is defined in a principled type-theoretic style, with a rich metatheory mechanized in Agda; and 2) users need not construct outer forms before they construct inner forms. Instead, Hazelnut's \emph{action semantics} automatically places terms that have a type that is inconsistent with the expected type into a \emph{hole}, which safely defers the type consistency check until the hole is \emph{finished}. Interestingly, this mechanism is related to a mechanism that arises in the semantics of gradual type systems. %Formally, Hazelnut is a bidirectionally typed lambda calculus extended with \emph{holes}, a \emph{focus model} (based on Huet's zipper) and an \emph{action model}.
 \end{abstract}
 
 %\category{D.3.2}{Programming Languages}{Language Classifications}[Extensible Languages]
