added TODO to cite andy ko's paper on design requirements

--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -1294,7 +1294,9 @@ Perhaps the systems most similar in spirit to Hazelnut are Lamdu~\cite{lamdu} an
 
 Our work differs from all of these in that we begin with a formal editor calculus and build from there, rather than starting with an implementation and leaving many of the formal details formally unspecified. For example, while Lamdu has many interesting features, there is no theoretical basis presented for their work -- it is a rather large body of Haskell code with an unclear (and indeed, often somewhat perplexing, in our experience) action model. Unison is also a rather large body of Haskell code, though its action model appears superficially more similar to ours. We maintain what we believe to be a stronger action sensibility invariant than Unison (i.e. in Unison, one must construct expressions from the outside-in.) These systems are rich sources of interesting ideas, however -- there is room enough for many different approaches in this (re-)emerging space.
 
-TODO: cite http://cseweb.ucsd.edu/~lerner/pb.html
+TODO: cite \url{http://cseweb.ucsd.edu/~lerner/pb.html}
+
+TODO: cite \url{http://delivery.acm.org/10.1145/1060000/1056965/p1557-ko.pdf?ip=73.154.143.34&id=1056965&acc=AUTHOR-IZED&key=4D4702B0C3E38B35%2E4D4702B0C3E38B35%2E4D4702B0C3E38B35%2EC2CC0A83071F7605&CFID=780613712&CFTOKEN=33786941&__acm__=1462392463_f29fc98965004c61bfb1291d07756a23}
 
 %Drag-and-drop / for novices: lots of examples, e.g. Alice and others
 %
