--- a/macros.tex
+++ b/macros.tex
@@ -21,6 +21,7 @@
 \newcommand{\hadd}[2]{#1 + #2}
 \newcommand{\hehole}{\llparenthesis\rrparenthesis}
 \newcommand{\hhole}[1]{\llparenthesis#1\rrparenthesis}
+\newcommand{\hindet}[1]{\lceil#1\rceil}
 
 \newcommand{\hGamma}{\dot{\Gamma}}
 \newcommand{\domof}[1]{\text{dom}(#1)}
