--- a/dynamics.tex
+++ b/dynamics.tex
@@ -50,15 +50,15 @@
   \judgbox{e~\textsf{indet}}{Expression $e$ is indeterminate}
   \begin{mathpar}
     \Infer{I-plus}
-          { e_1~\textsf{final} \\
-            e_2~\textsf{final} \\
+          { e_1~\textsf{final} ~~ ~~ ~~
+            e_2~\textsf{final} \\\\
             \left(e_1 \ne \hnum{n_1} \vee e_2 \ne \hnum{n_2}\right)
           }
           {\hadd{e_1}{e_2}~\textsf{indet}}
     \and
     \Infer{I-app}
-          { e_1~\textsf{final} \\
-            e_2~\textsf{final} \\
+          { e_1~\textsf{final} ~~ ~~ ~~
+            e_2~\textsf{final} \\\\
             e_1 \ne \hlam{x}{e_1'}
           }
           {\hap{e_1}{e_2}~\textsf{indet}}
@@ -112,9 +112,9 @@
 
    \Infer{S-ap$_4$}
           { e_1~\textsf{final} ~~ ~~ ~~
-            e_1~\textsf{final}
+            e_2~\textsf{final}
             \\\\
-            \left(e_1 \ne \hlam{x}{e_1'} \right)
+            e_1 \ne \hlam{x}{e_1'} ~~ ~~ ~~ ~~ ~~ ~~ ~~ { }
           }
           { \hap{e_1}{e_2} \longrightarrow \hindet{\hap{e_1}{e_2}} }
 
