--- a/macros.tex
+++ b/macros.tex
@@ -79,3 +79,5 @@
 
 % Talk about formal rules in example
 \newcommand{\refrule}[1]{\textrm{Rule~(#1)}}
+
+\newcommand{\herase}[1]{\left|#1\right|_\textsf{erase}}
