--- a/dynamics.tex
+++ b/dynamics.tex
@@ -210,7 +210,7 @@ that enjoy type soundness with respect to the dynamics.
 \\
 If $\hGamma, x : \tau_x \vdash \hexp : \htau$
 \\
-and $\hexp'~\textsf{final}$
+and $\hexp'~\textsf{final}$~~~(do we actually need this condition?)
 \\
 and $\hGamma \vdash \hexp' : \htau_x$
 \\
